@@ -6,6 +6,13 @@ Collage 1.2.0 trunk (unreleased)
 
 https://svn.plone.org/collective/Products.Collage/trunk/
 
+
+* Added Alias target search limit in config panel.
+  [glenfant]
+
+* Optimizations of existing items view including link to target.
+  [glenfant]
+
 * Removed code for old Plone (< 3.1) support since we can't be used in
   Plone 3.0 or older anymore
   [glenfant]
